...
                            <constraint firstAttribute="trailing" secondItem="m68-wg-Lcm" secondAttribute="trailing" id="aoV-Hu-Xew"/>
                            <constraint firstItem="JvE-A3-ag8" firstAttribute="centerX" secondItem="eZb-iv-QxW" secondAttribute="centerX" id="dXk-b7-plE"/>
                            <constraint firstItem="Uq3-Z4-sVu" firstAttribute="top" secondItem="m68-wg-Lcm" secondAttribute="bottom" id="dbe-60-snP"/>
                            <constraint firstItem="m68-wg-Lcm" firstAttribute="top" secondItem="eZb-iv-QxW" secondAttribute="top" id="oOi-Eg-ezZ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Users" id="DKg-XM-9zn">
                        <barButtonItem key="leftBarButtonItem" title="Menu" id="vTI-Yv-dmy">
                            <connections>
                                <action selector="menuButtonPressed:" destination="L4a-0N-Dhw" id="Ete-Uk-8qT"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
                                <rect key="frame" x="236" y="117" width="128" height="30"/>
                                <color key="backgroundColor" red="0.46274510029999999" green="0.6784313917" blue="0.71372550729999995" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="128" id="Vt8-Rk-A7F"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="Find user">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="findUserButtonPressed:" destination="gms-AL-EXO" eventType="touchUpInside" id="Mlq-vd-vIn"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4qX-Oc-ku6">
                                <rect key="frame" x="16" y="72" width="568" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="FrU-FE-Jsy"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <constraint firstItem="eut-bG-xeA" firstAttribute="leading" secondItem="sOA-OH-oSr" secondAttribute="leading" id="W2k-Hx-dO5"/>
                            <constraint firstAttribute="trailing" secondItem="sOA-OH-oSr" secondAttribute="trailing" constant="16" id="dm5-Vd-bbi"/>
                            <constraint firstItem="39a-0J-IQz" firstAttribute="top" secondItem="sOA-OH-oSr" secondAttribute="bottom" constant="55" id="nlr-fr-jrv"/>
                            <constraint firstItem="eut-bG-xeA" firstAttribute="bottom" secondItem="sOA-OH-oSr" secondAttribute="bottom" id="wBS-4n-vqH"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="User" id="WeF-Ev-LHU"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="userImageView" destination="sOA-OH-oSr" id="tEi-Hy-aqW"/>
                        <outlet property="userNameLabel" destination="eut-bG-xeA" id="huY-3g-JST"/>
                    </connections>
                </viewController>
...
